--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <input type="file" name="file" id="file">
 <button onclick = "upload()"> Upload </button>
 <button onclick = "copy()"> Copy </button>
-<button onclick = "download()"> Download </button> <br>
+<button onclick = "download()"> Download </button> <br><br>
   <input type="number" placeholder="sx" id="sxField">
   <input type="number" placeholder="sy" id="syField">
   <input type="number" placeholder="sw" id="swField">
