--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@ var context1 = canvas1.getContext('2d');
 var canvas2  = document.getElementById("canvas2");
 var context2 = canvas2.getContext('2d');
   
-        var imgData = context1.getImageData(sx, sy, sw, sh);
-        context2.putImageData(imgData, dx, dy, dw, dh);
+        var imgData = context1.getImageData(0, 0, 100, 100);
+        context1.putImageData(imgData, 200, 0, 100, 100);
  }
 </script>
   
