--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </canvas>
   
 <script>
-alert('1'); var context ;
+alert('1'); 
 function upload() {
   
   var sx = document.getElementById("sxField").value; 
@@ -70,7 +70,7 @@ var context1 = canvas1.getContext('2d');
  
 var canvas2  = document.getElementById("canvas2");
 var context2 = canvas2.getContext('2d');
-        context1 = context ;
+        var imageData = context1.createImageData(1000, 1000);
         var imgData = context1.getImageData(0, 0, 100, 100);
         context1.putImageData(imgData, 200, 0, 100, 100);
  }
