--- a/index.html
+++ b/index.html
@@ -72,7 +72,8 @@ var canvas2  = document.getElementById("canvas2");
 var context2 = canvas2.getContext('2d');
         var imgData = document.getElementById('canvas1') ;
         // var imgData = context1.getImageData(0, 0, 100, 100);
-        context1.putImageData(imgData, 200, 0, 100, 100);
+       // context1.putImageData(imgData, 200, 0, 100, 100);
+       context1.drawImage(imgData, 400, 400);
  }
 </script>
   
