--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@ var context1 = canvas1.getContext('2d');
  
 var canvas2  = document.getElementById("canvas2");
 var context2 = canvas2.getContext('2d');
-        var imgData = document.getElementById('canvas1') ;
-        // var imgData = context1.getImageData(0, 0, 100, 100);
-       // context1.putImageData(imgData, 200, 0, 100, 100);
-       context1.drawImage(imgData, 400, 400);
+  
+     var imgData = document.getElementById('canvas1') ;
+        
+     context2.drawImage(imgData, 0, 0, 100, 100, 400, 0);
  }
+  
 </script>
   
 <script>
