--- a/index.html
+++ b/index.html
@@ -67,13 +67,21 @@ function copy() {
   
 var canvas1  = document.getElementById("canvas1");
 var context1 = canvas1.getContext('2d');
- 
 var canvas2  = document.getElementById("canvas2");
 var context2 = canvas2.getContext('2d');
+var file2 = document.getElementById("file").files[0] ;
+
+        var image2 = new Image();
+        image2.setAttribute('crossOrigin', 'anonymous');
+        image2.src = URL.createObjectURL(file2);
+        image2.onload = function (e) {
+          context1.drawImage(image2, 0, 0);
+        };
   
-     var imgData = document.getElementById('canvas1') ;
-        
-     context2.drawImage(imgData, 0, 0, 100, 100, 400, 0);
+     // var imgData = document.getElementById('canvas1') ;
+     var imgData = context2.getImageData(0, 0, 50, 50);
+     ctx.putImageData(imgData, 400, 0);
+     // context2.drawImage(imgData, 0, 0, 100, 100, 400, 0);
  }
   
 </script>
