--- a/index.html
+++ b/index.html
@@ -76,12 +76,13 @@ var file2 = document.getElementById("file").files[0] ;
         image2.src = URL.createObjectURL(file2);
         image2.onload = function (e) {
           context1.drawImage(image2, 0, 0);
-        };
+        // };
   
      // var imgData = document.getElementById('canvas1') ;
      var imgData = context2.getImageData(0, 0, 50, 50);
-     ctx.putImageData(imgData, 400, 0);
+     context2.putImageData(imgData, 400, 0);
      // context2.drawImage(imgData, 0, 0, 100, 100, 400, 0);
+   };
  }
   
 </script>
