--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ var file2 = document.getElementById("file").files[0] ;
   
      
      var imgData = context1.getImageData(0, 0, 100, 100);
-     context2.putImageData(imgData, 0, 0, 100, 100);
+     context2.putImageData(imgData, 0, 0);
      
    };
  }
