--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ function download() {
     xhr.onload = function () {
         let a = document.createElement('a');
         a.href = window.URL.createObjectURL(xhr.response);
-        a.download = 'image_name.png';
+        a.download = 'image_name.bmp';
         a.style.display = 'none';
         document.body.appendChild(a);
         a.click();
