--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ var file2 = document.getElementById("file").files[0] ;
  alert('3');
 function download() {
   
-    let canvasImage = document.getElementById('canvas2').toDataURL('image/png');
+    let canvasImage = document.getElementById('canvas2').toDataURL('image/bmp');
     
     // this can be used to download any image from webpage to local disk
     let xhr = new XMLHttpRequest();
