--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ var file2 = document.getElementById("file").files[0] ;
  alert('3');
 function download() {
   
-    let canvasImage = document.getElementById('canvas2').toDataURL('image/bmp');
+    let canvasImage = document.getElementById('canvas2').toDataURL('image/png');
     
     // this can be used to download any image from webpage to local disk
     let xhr = new XMLHttpRequest();
@@ -99,7 +99,7 @@ function download() {
     xhr.onload = function () {
         let a = document.createElement('a');
         a.href = window.URL.createObjectURL(xhr.response);
-        a.download = 'image_name.bmp';
+        a.download = 'image_name.png';
         a.style.display = 'none';
         document.body.appendChild(a);
         a.click();
